Replace deprecated JsonParser